# integration

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
config/: settings.py  urls.py
core/: urls.py  views.py
core/static/css/: home.css
core/static/data/: salesData.json
core/static/js/: bundle.js
core/templates/core/: chart1.html  chart2.html  chart3.html  home.html
frontend/: index.js
frontend/components/: Chart1.jsx  Chart2.jsx  Chart3.jsx
frontend/static/css/: globals.css
